deploy/deploy-api-v2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
spec:
  selector:
    matchLabels:
      app: webinar
      component: api
  template:
    metadata:
      labels:
        app: webinar
        component: api
    spec:
      volumes:
      - name: sql-volume
        configMap:
          name: sqlseed
      containers:
      - name: api
        image: eiximenis/webinarlc-beersapi
        imagePullPolicy: Always
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 7700
