deploy/deploy-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
spec:
  selector:
    matchLabels:
      app: webinar
      component: api
  template:
    metadata:
      labels:
        app: webinar
        component: api
    spec:
      containers:
      - name: api
        image: eiximenis/webinarlc-beersapi
        imagePullPolicy: Always
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 7700
---
apiVersion: v1
kind: Service
metadata:
  name: api
spec:
  selector:
    app: webinar
    component: api
  ports:
  - port: 80
    targetPort: 7700
    protocol: TCP
    name: http
