deploy/deploy-web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
spec:
  selector:
    matchLabels:
      app: webinar
      component: web
  template:
    metadata:
      labels:
        app: webinar
        component: web
    spec:
      containers:
      - name: web
        image: eiximenis/webinarlc-beersweb
        imagePullPolicy: Always
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: web
spec:
  selector:
    app: webinar
    component: web
  ports:
  - port: 80
    protocol: TCP
    name: http
