deploy/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: web
spec:
  rules:
  - host: your-dns.com
    http:
      paths:
      - backend:
          serviceName: web
          servicePort: 80
        path: /
